--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "swiper": "^6.5.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
