--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.0.5",
     "swiper": "^6.5.0",
     "web-vitals": "^1.1.0"
   },
