--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "redux-form": "^8.3.7",
+    "redux-thunk": "^2.3.0",
     "swiper": "^6.5.0",
     "web-vitals": "^1.1.0"
   },
