--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "redux": "^4.0.5",
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
+    "sweetalert2": "^10.16.0",
     "swiper": "^6.5.0",
     "web-vitals": "^1.1.0"
   },
